packages/dartcv/src/calib3d/calib3d.h

// computes valid disparity ROI from the valid ROIs of the rectified images (that are returned by stereoRectify)
// Rect cv::getValidDisparityROI (Rect roi1, Rect roi2, int minDisparity, int numberOfDisparities, int blockSize)

// Finds an initial camera intrinsic matrix from 3D-2D point correspondences.
// Mat cv::initCameraMatrix2D (InputArrayOfArrays objectPoints, InputArrayOfArrays imagePoints, Size imageSize, double aspectRatio=1.0)

// Computes the projection and inverse-rectification transformation map. In essense, this is the inverse of initUndistortRectifyMap to accomodate stereo-rectification of projectors ('inverse-cameras') in projector-camera pairs.
// void cv::initInverseRectificationMap (InputArray cameraMatrix, InputArray distCoeffs, InputArray R, InputArray newCameraMatrix, const Size &size, int m1type, OutputArray map1, OutputArray map2)

// Computes the undistortion and rectification transformation map.
// void cv::initUndistortRectifyMap (InputArray cameraMatrix, InputArray distCoeffs, InputArray R, InputArray newCameraMatrix, Size size, int m1type, OutputArray map1, OutputArray map2)
CvStatus *cv_initUndistortRectifyMap(
    Mat cameraMatrix,
    Mat distCoeffs,
    Mat r,
    Mat newCameraMatrix,
    CvSize size,
    int m1type,
    Mat map1,
    Mat map2,
    CvCallback_0 callback
);
// initializes maps for remap for wide-angle
// float cv::initWideAngleProjMap (InputArray cameraMatrix, InputArray distCoeffs, Size imageSize, int destImageWidth, int m1type, OutputArray map1, OutputArray map2, enum UndistortTypes projType=PROJ_SPHERICAL_EQRECT, double alpha=0)
CvStatus *cv_initWideAngleProjMap(
    MatIn cameraMatrix,
    MatIn distCoeffs,
    CvSize size,
    int destImageWidth,
    int m1type,
    MatOut map1,
    MatOut map2,
    int projType,
    double alpha,
    float *rval,
    CvCallback_0 callback
);
// Computes partial derivatives of the matrix product for each multiplied matrix.
// void cv::matMulDeriv (InputArray A, InputArray B, OutputArray dABdA, OutputArray dABdB)
CvStatus *cv_matMulDeriv(
    MatIn A,
    MatIn B,
    MatOut dABdA,
    MatOut dABdB,
    CvCallback_0 callback
);
// Projects 3D points to an image plane.
// void cv::projectPoints (InputArray objectPoints, InputArray rvec, InputArray tvec, InputArray cameraMatrix, InputArray distCoeffs, OutputArray imagePoints, OutputArray jacobian=noArray(), double aspectRatio=0)
CvStatus *cv_projectPoints(
    MatIn objectPoints,
    MatIn rvec,
    MatIn tvec,
    MatIn cameraMatrix,
    MatIn distCoeffs,
    MatOut imagePoints,
    MatOut jacobian,
    double aspectRatio,
    CvCallback_0 callback
);
// Recovers the relative camera rotation and the translation from an estimated essential matrix and the corresponding points in two images, using chirality check. Returns the number of inliers that pass the check.
// int cv::recoverPose (InputArray E, InputArray points1, InputArray points2, InputArray cameraMatrix, OutputArray R, OutputArray t, InputOutputArray mask=noArray())
// int cv::recoverPose (InputArray E, InputArray points1, InputArray points2, InputArray cameraMatrix, OutputArray R, OutputArray t, double distanceThresh, InputOutputArray mask=noArray(), OutputArray triangulatedPoints=noArray())
CvStatus *cv_recoverPose(
    MatIn E, MatIn points1, MatIn points2, MatIn cameraMatrix, MatOut R, MatOut t, double distanceThresh, MatInOut mask,
    MatOut triangulatedPoints, int *rval, CvCallback_0 callback
);
// int cv::recoverPose (InputArray E, InputArray points1, InputArray points2, OutputArray R, OutputArray t, double focal=1.0, Point2d pp=Point2d(0, 0), InputOutputArray mask=noArray())
CvStatus *cv_recoverPose_1(
    MatIn E, MatIn points1, MatIn points2, MatOut R, MatOut t, double focal, CvPoint2d pp, MatInOut mask, int *rval,
    CvCallback_0 callback
);
// Recovers the relative camera rotation and the translation from corresponding points in two images from two different cameras, using cheirality check. Returns the number of inliers that pass the check.
// int cv::recoverPose (InputArray points1, InputArray points2, InputArray cameraMatrix1, InputArray distCoeffs1, InputArray cameraMatrix2, InputArray distCoeffs2, OutputArray E, OutputArray R, OutputArray t, int method=cv::RANSAC, double prob=0.999, double threshold=1.0, InputOutputArray mask=noArray())

// computes the rectification transformations for 3-head camera, where all the heads are on the same line.
// float cv::rectify3Collinear (InputArray cameraMatrix1, InputArray distCoeffs1, InputArray cameraMatrix2, InputArray distCoeffs2, InputArray cameraMatrix3, InputArray distCoeffs3, InputArrayOfArrays imgpt1, InputArrayOfArrays imgpt3, Size imageSize, InputArray R12, InputArray T12, InputArray R13, InputArray T13, OutputArray R1, OutputArray R2, OutputArray R3, OutputArray P1, OutputArray P2, OutputArray P3, OutputArray Q, double alpha, Size newImgSize, Rect *roi1, Rect *roi2, int flags)

// Reprojects a disparity image to 3D space.
// void cv::reprojectImageTo3D (InputArray disparity, OutputArray _3dImage, InputArray Q, bool handleMissingValues=false, int ddepth=-1)
CvStatus *cv_reprojectImageTo3D(
    MatIn disparity, MatOut _3dImage, MatIn Q, bool handleMissingValues, int ddepth, CvCallback_0 callback
);
// Calculates the Sampson Distance between two points.
// double cv::sampsonDistance (InputArray pt1, InputArray pt2, InputArray F)
double cv_sampsonDistance(MatIn pt1, MatIn pt2, MatIn F);
// Finds an object pose from 3 3D-2D point correspondences.
// int cv::solveP3P (InputArray objectPoints, InputArray imagePoints, InputArray cameraMatrix, InputArray distCoeffs, OutputArrayOfArrays rvecs, OutputArrayOfArrays tvecs, int flags)
CvStatus *cv_solveP3P(MatIn objectPoints, MatIn imagePoints, MatIn cameraMatrix, MatIn distCoeffs, VecMat *rvecs,
                      VecMat *tvecs, int flags, int *rval, CvCallback_0 callback);
// Finds an object pose from 3D-2D point correspondences.
// bool cv::solvePnP (InputArray objectPoints, InputArray imagePoints, InputArray cameraMatrix, InputArray distCoeffs, OutputArray rvec, OutputArray tvec, bool useExtrinsicGuess=false, int flags=SOLVEPNP_ITERATIVE)
CvStatus *cv_solvePnP(MatIn objectPoints, MatIn imagePoints, MatIn cameraMatrix, MatIn distCoeffs, MatOut rvec,
                      MatOut tvec, bool useExtrinsicGuess, int flags, bool *rval, CvCallback_0 callback);
// Finds an object pose from 3D-2D point correspondences.
// int cv::solvePnPGeneric (InputArray objectPoints, InputArray imagePoints, InputArray cameraMatrix, InputArray distCoeffs, OutputArrayOfArrays rvecs, OutputArrayOfArrays tvecs, bool useExtrinsicGuess=false, SolvePnPMethod flags=SOLVEPNP_ITERATIVE, InputArray rvec=noArray(), InputArray tvec=noArray(), OutputArray reprojectionError=noArray())
CvStatus *cv_solvePnPGeneric(MatIn objectPoints, MatIn imagePoints, MatIn cameraMatrix, MatIn distCoeffs, VecMat *rvecs,
                             VecMat *tvecs, bool useExtrinsicGuess, int flags, MatIn rvec, MatIn tvec,
                             MatOut reprojectionError, int *rval, CvCallback_0 callback);