packages/dartcv/lib/src/g/calib3d.g.dart


  late final _cv_initUndistortRectifyMapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, CvSize, ffi.Int,
              Mat, Mat, imp1.CvCallback_0)>>('cv_initUndistortRectifyMap');
  late final _cv_initUndistortRectifyMap =
      _cv_initUndistortRectifyMapPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, CvSize, int, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_initWideAngleProjMap(
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    CvSize size,
    int destImageWidth,
    int m1type,
    imp1.MatOut map1,
    imp1.MatOut map2,
    int projType,
    double alpha,
    ffi.Pointer<ffi.Float> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_initWideAngleProjMap(
      cameraMatrix,
      distCoeffs,
      size,
      destImageWidth,
      m1type,
      map1,
      map2,
      projType,
      alpha,
      rval,
      callback,
    );
  }

  late final _cv_initWideAngleProjMapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              CvSize,
              ffi.Int,
              ffi.Int,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Int,
              ffi.Double,
              ffi.Pointer<ffi.Float>,
              imp1.CvCallback_0)>>('cv_initWideAngleProjMap');
  late final _cv_initWideAngleProjMap = _cv_initWideAngleProjMapPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          CvSize,
          int,
          int,
          imp1.MatOut,
          imp1.MatOut,
          int,
          double,
          ffi.Pointer<ffi.Float>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_matMulDeriv(
    imp1.MatIn A,
    imp1.MatIn B,
    imp1.MatOut dABdA,
    imp1.MatOut dABdB,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_matMulDeriv(
      A,
      B,
      dABdA,
      dABdB,
      callback,
    );
  }

  late final _cv_matMulDerivPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, imp1.MatOut,
              imp1.MatOut, imp1.CvCallback_0)>>('cv_matMulDeriv');
  late final _cv_matMulDeriv = _cv_matMulDerivPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatIn, imp1.MatOut,
          imp1.MatOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_projectPoints(
    imp1.MatIn objectPoints,
    imp1.MatIn rvec,
    imp1.MatIn tvec,
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    imp1.MatOut imagePoints,
    imp1.MatOut jacobian,
    double aspectRatio,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_projectPoints(
      objectPoints,
      rvec,
      tvec,
      cameraMatrix,
      distCoeffs,
      imagePoints,
      jacobian,
      aspectRatio,
      callback,
    );
  }

  late final _cv_projectPointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Double,
              imp1.CvCallback_0)>>('cv_projectPoints');
  late final _cv_projectPoints = _cv_projectPointsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          double,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_recoverPose(
    imp1.MatIn E,
    imp1.MatIn points1,
    imp1.MatIn points2,
    imp1.MatIn cameraMatrix,
    imp1.MatOut R,
    imp1.MatOut t,
    double distanceThresh,
    imp1.MatInOut mask,
    imp1.MatOut triangulatedPoints,
    ffi.Pointer<ffi.Int> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_recoverPose(
      E,
      points1,
      points2,
      cameraMatrix,
      R,
      t,
      distanceThresh,
      mask,
      triangulatedPoints,
      rval,
      callback,
    );
  }

  late final _cv_recoverPosePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Double,
              imp1.MatInOut,
              imp1.MatOut,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>>('cv_recoverPose');
  late final _cv_recoverPose = _cv_recoverPosePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          double,
          imp1.MatInOut,
          imp1.MatOut,
          ffi.Pointer<ffi.Int>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_recoverPose_1(
    imp1.MatIn E,
    imp1.MatIn points1,
    imp1.MatIn points2,
    imp1.MatOut R,
    imp1.MatOut t,
    double focal,
    CvPoint2d pp,
    imp1.MatInOut mask,
    ffi.Pointer<ffi.Int> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_recoverPose_1(
      E,
      points1,
      points2,
      R,
      t,
      focal,
      pp,
      mask,
      rval,
      callback,
    );
  }

  late final _cv_recoverPose_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Double,
              CvPoint2d,
              imp1.MatInOut,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>>('cv_recoverPose_1');
  late final _cv_recoverPose_1 = _cv_recoverPose_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          double,
          CvPoint2d,
          imp1.MatInOut,
          ffi.Pointer<ffi.Int>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_reprojectImageTo3D(
    imp1.MatIn disparity,
    imp1.MatOut _3dImage,
    imp1.MatIn Q,
    bool handleMissingValues,
    int ddepth,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_reprojectImageTo3D(
      disparity,
      _3dImage,
      Q,
      handleMissingValues,
      ddepth,
      callback,
    );
  }

  late final _cv_reprojectImageTo3DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatOut, imp1.MatIn,
              ffi.Bool, ffi.Int, imp1.CvCallback_0)>>('cv_reprojectImageTo3D');
  late final _cv_reprojectImageTo3D = _cv_reprojectImageTo3DPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn, imp1.MatOut, imp1.MatIn, bool, int, imp1.CvCallback_0)>();

  double cv_sampsonDistance(
    imp1.MatIn pt1,
    imp1.MatIn pt2,
    imp1.MatIn F,
  ) {
    return _cv_sampsonDistance(
      pt1,
      pt2,
      F,
    );
  }

  late final _cv_sampsonDistancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              imp1.MatIn, imp1.MatIn, imp1.MatIn)>>('cv_sampsonDistance');
  late final _cv_sampsonDistance = _cv_sampsonDistancePtr
      .asFunction<double Function(imp1.MatIn, imp1.MatIn, imp1.MatIn)>();

  ffi.Pointer<CvStatus> cv_solveP3P(
    imp1.MatIn objectPoints,
    imp1.MatIn imagePoints,
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    ffi.Pointer<VecMat> rvecs,
    ffi.Pointer<VecMat> tvecs,
    int flags,
    ffi.Pointer<ffi.Int> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_solveP3P(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvecs,
      tvecs,
      flags,
      rval,
      callback,
    );
  }

  late final _cv_solveP3PPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              ffi.Pointer<VecMat>,
              ffi.Pointer<VecMat>,
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>>('cv_solveP3P');
  late final _cv_solveP3P = _cv_solveP3PPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          ffi.Pointer<VecMat>,
          ffi.Pointer<VecMat>,
          int,
          ffi.Pointer<ffi.Int>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_solvePnP(
    imp1.MatIn objectPoints,
    imp1.MatIn imagePoints,
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    imp1.MatOut rvec,
    imp1.MatOut tvec,
    bool useExtrinsicGuess,
    int flags,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_solvePnP(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvec,
      tvec,
      useExtrinsicGuess,
      flags,
      rval,
      callback,
    );
  }

  late final _cv_solvePnPPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Bool,
              ffi.Int,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_solvePnP');
  late final _cv_solvePnP = _cv_solvePnPPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          imp1.MatOut,
          bool,
          int,
          ffi.Pointer<ffi.Bool>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_solvePnPGeneric(
    imp1.MatIn objectPoints,
    imp1.MatIn imagePoints,
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    ffi.Pointer<VecMat> rvecs,
    ffi.Pointer<VecMat> tvecs,
    bool useExtrinsicGuess,
    int flags,
    imp1.MatIn rvec,
    imp1.MatIn tvec,
    imp1.MatOut reprojectionError,
    ffi.Pointer<ffi.Int> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_solvePnPGeneric(
      objectPoints,
      imagePoints,
      cameraMatrix,
      distCoeffs,
      rvecs,
      tvecs,
      useExtrinsicGuess,
      flags,
      rvec,
      tvec,
      reprojectionError,
      rval,
      callback,
    );
  }

  late final _cv_solvePnPGenericPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              ffi.Pointer<VecMat>,
              ffi.Pointer<VecMat>,
              ffi.Bool,
              ffi.Int,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>>('cv_solvePnPGeneric');
  late final _cv_solvePnPGeneric = _cv_solvePnPGenericPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatIn,
          ffi.Pointer<VecMat>,
          ffi.Pointer<VecMat>,
          bool,
          int,
          imp1.MatIn,
          imp1.MatIn,
          imp1.MatOut,
          ffi.Pointer<ffi.Int>,
          imp1.CvCallback_0)>();
